# rust-winxp

./: README.md
cpp/: httptool.hpp  main.cpp
httptool/: Cargo.toml  build.cmd  buildx86.cmd
httptool/src/: lib.rs
