[package]
name = "httptool"
version = "0.1.0"
authors = ["planet0104 <planet0104@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.3.2"
rand = "0.6.5"
base64 = "0.11.0"
block-modes = "0.3.3"
encoding_rs = "0.8.20"
rsa_public_encrypt_pkcs1 = "0.2.0"
http_req  = {version="0.5.3", default-features = false, features = ["rust-tls"]}
serde_json = "1.0.41"
[lib]
crate-type = ["dylib"]